<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015 Jérémie Boutoille, Jules Cantegril, Hugo Djemaa, Mickael Goubin, David Livet
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>

    <string name="app_name">SopraCovoit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_name_example">Ernesto Exposito</string>
    <string name="drawer_mail_example">eexposito@insa-toulouse.fr</string>
    <string name="drawer_item_example">Go somewhere</string>
    <string name="provider_name">Server synchronize</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="btn_singin">Sign in</string>
    <string name="btn_newuser">New user?</string>
    <string name="hint_name">Nom</string>
    <string name="hint_surname">Prénom</string>
    <string name="hint_mail">Mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_phone">Téléphone</string>
    <string name="driver_title">Conducteur</string>
    <string name="switch_driver_name">Conducteur</string>
    <string name="Path_title">Trajet</string>
    <string name="city_hint">Ville</string>
    <string name="departure_hint">Aller</string>
    <string name="return_hint">Retour</string>
    <string name="ok">Ok</string>
    <string name="title_info">Informations</string>
    <string name="action_register">OK</string>
    <string name="title_around">Around you</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distance">%1$s m</string>
    <string name="time">Leaving around %1$s:%2$s</string>
    <string name="field_required">This field is required !</string>
    <string name="field_bad_email">This email is incorrect !</string>
    <string name="field_bad_phone">This phone is bad !</string>
    <string name="field_bad_time">This time is bad !</string>
    <string name="to_title">To</string>
    <string name="from_title">From</string>
    <string name="phone_title">Phone</string>
    <string name="mail_title">Email</string>
    <string name="contact_title">Contact him !</string>
    <string name="looking_pasengers">is looking for some passengers</string>
    <string name="looking_driver">is looking for a driver</string>
    <string-array name="tabs_covoit">
        <item>To Sopra workplace</item>
        <item>To home</item>
    </string-array>
</resources>
