<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Jérémie Boutoille, Jules Cantegril, Hugo Djemaa, Mickael Goubin, David Livet
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/material_minimal_separator"
        android:layout_marginBottom="@dimen/material_minimal_separator"
        android:layout_marginLeft="@dimen/material_double_separator"
        android:layout_marginRight="@dimen/material_double_separator">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/incremental_1"
            android:gravity="center_vertical"
            android:text="@string/title_info"
            style="@style/AppTheme.CardTitle"
            />
        <EditText
            android:id="@+id/name"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="textPersonName"
            android:hint="@string/hint_surname" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_mail" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="phone"
            android:hint="@string/hint_phone" />
    </LinearLayout>
</android.support.v7.widget.CardView>