<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Jérémie Boutoille, Jules Cantegril, Hugo Djemaa, Mickael Goubin, David Livet
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/material_minimal_separator"
    android:layout_marginBottom="@dimen/material_double_separator"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_minimal_separator"
        android:layout_marginBottom="@dimen/material_minimal_separator"
        android:layout_marginLeft="@dimen/material_double_separator"
        android:layout_marginRight="@dimen/material_double_separator"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/incremental_1"
            android:gravity="center_vertical"
            android:text="@string/Path_title"
            style="@style/AppTheme.CardTitle"
            />


        <AutoCompleteTextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="textPostalAddress"
            android:hint="@string/city_hint" />

        <Spinner
            android:id="@+id/sopralist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/incremental_1"
            android:layout_marginTop="@dimen/material_minimal_separator"

            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/departure_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="time"
            android:hint="@string/departure_hint" />

        <EditText
            android:id="@+id/return_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:inputType="time"
            android:hint="@string/return_hint" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/incremental_1"
            android:gravity="center"
            android:layout_marginTop="@dimen/material_minimal_separator"
            >

            <TextView
                android:id="@+id/driver_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/driver_title"
                android:layout_weight="1" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
