<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Jérémie Boutoille, Jules Cantegril, Hugo Djemaa, Mickael Goubin, David Livet
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/material_double_separator"
                    android:layout_marginRight="@dimen/material_double_separator">
        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/incremental_3"/>
        <android.support.v7.widget.CardView
            android:id="@+id/user_card"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/material_minimal_separator"
            android:layout_below="@id/map"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_double_separator"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Jules"
                    android:textColor="@color/accent"
                    style="@style/TextAppearance.AppCompat.Display1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="is looking for some passengers"
                    android:layout_marginLeft="@dimen/material_double_separator"
                    android:layout_marginStart="@dimen/material_double_separator"
                    android:textStyle="italic"
                    style="@style/TextAppearance.AppCompat.Subhead"/>
            </LinearLayout>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/user_card"
            android:id="@+id/path_card"
            android:layout_marginTop="@dimen/material_minimal_separator">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_double_separator"
                >
                <TextView
                    android:id="@+id/from_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_title"
                    style="@style/TextAppearance.AppCompat.Display1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/from_title"
                    android:layout_toEndOf="@id/from_title"
                    android:layout_marginStart="@dimen/material_double_separator"
                    android:layout_marginLeft="@dimen/material_double_separator"
                    tools:text="Villefranche"
                    android:textColor="@color/accent"
                    style="@style/TextAppearance.AppCompat.Display1"/>
                <TextView
                    android:id="@+id/to_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/from_title"
                    android:text="@string/to_title"
                    style="@style/TextAppearance.AppCompat.Display1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/to_title"
                    android:layout_toEndOf="@id/to_title"
                    android:layout_below="@id/from_title"
                    android:layout_marginStart="@dimen/material_double_separator"
                    android:layout_marginLeft="@dimen/material_double_separator"
                    tools:text="Sopra1"
                    android:textColor="@color/accent"
                    style="@style/TextAppearance.AppCompat.Display1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/to_title"
                    android:layout_marginLeft="@dimen/material_double_separator"
                    android:layout_marginStart="@dimen/material_double_separator"
                    android:textStyle="italic"
                    tools:text="Leaving around 9 a.m."
                    style="@style/TextAppearance.AppCompat.Subhead"
                    />
            </RelativeLayout>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/path_card"
            android:layout_marginTop="@dimen/material_minimal_separator">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_double_separator"
                >
                <TextView
                    android:id="@+id/contact_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_title"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_marginBottom="@dimen/material_minimal_separator"/>


                <TextView
                    android:id="@+id/TV_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_title"
                    android:layout_marginStart="@dimen/material_minimal_separator"
                    android:layout_marginLeft="@dimen/material_minimal_separator"
                    android:drawableLeft="@drawable/ic_email_grey"
                    android:drawableStart="@drawable/ic_email_grey"
                    android:drawablePadding="@dimen/material_minimal_separator"
                    android:minHeight="@dimen/incremental_1"
                    android:gravity="center_vertical"
                    tools:text="tar@ac.ce"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />
                <TextView
                    android:id="@+id/TV_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TV_mail"
                    android:layout_marginStart="@dimen/material_minimal_separator"
                    android:layout_marginLeft="@dimen/material_minimal_separator"
                    android:drawableLeft="@drawable/ic_phone_grey"
                    android:drawableStart="@drawable/ic_phone_grey"
                    android:drawablePadding="@dimen/material_minimal_separator"
                    android:minHeight="@dimen/incremental_1"
                    android:gravity="center_vertical"
                    tools:text="0650494949"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>